# ros2-cybersecurity-simulation

./: README.md  gitignore  setup_host.sh
attacker_vm/: attack_dos.py  attack_eavesdropping.py  attack_message_injection.py  network_scanner.py  setup_attacker_vm.sh
docs/: FILE_DESCRIPTIONS.md  HOW_TO_RUN.md
gazebo_worlds/: cybersecurity_world.world  simple_world.world
mitigation/: qos_protection_node.py  setup_sros2_security.sh
ros2_workspace/src/robot_controller/: package.xml  setup.py
ros2_workspace/src/robot_controller/launch/: robot_launch.py  simple_world_launch.py
ros2_workspace/src/robot_controller/robot_controller/: __init__.py  robot_controller_node.py  topic_monitor_node.py
