<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
FILE: package.xml
TYPE: ROS2 Package Manifest (runs on HOST machine)
PURPOSE: Declares the ROS2 package metadata and dependencies.
         Required by colcon to understand package structure and resolve dependencies.
-->
<package format="3">
  <name>robot_controller</name>
  <version>0.0.1</version>
  <description>ROS2 robot controller for cybersecurity simulation project</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
